# skellycam

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Info.plist  README.md  install-python.bat  install-python.js  install-python.sh  makefile  mkdocs.yml  nuxt.run.xml  package-lock.json  package.json  pyproject.toml  rename-binary.js  requirements-dev.txt  requirements.txt  run-python.bat  run_headless.bat  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github-actions/: publish_to_pypi_when_new_tag_is_pushed_to_main.yml
.github/workflows/: build-installers-prev.yml  build-installers.yml  build_executables.yml  build_pyinstaller_executables.yml  build_python_executables.yml  dev.yml  poetry_publish_to_pypi.yml  publish_to_pypi.yml  publish_to_pypi_when_new_tag_is_pushed_to_main.yml  pyapp_linux_installer.yml  pyapp_windows.yml  pyapp_windows_installer.yml
assets/logo/: skelly-cam-logo.ai
binaries/: build_pyinstaller_executable.py  skellycam.spec
components/: CameraGrid.vue  ThreeDViewport.vue
docs/Writerside/: sc0.tree  writerside.cfg
docs/notes/: .$DRAFT-skellycam-diagram.drawio.bkp  DRAFT-skellycam-diagram.drawio
experiments/: parameter_tree_view.py  simple_websocket.py
experiments/fancy_base_models/: fancy_base_model.py
experiments/my-webcam-app/: package.json
experiments/nuxt-tauri-cam/: nuxt.config.ts  package-lock.json
experiments/simple_ws_client/: run_ws_client.py  simple_viewer.py
fast_camera_capture/: README.md  __init__.py
fast_camera_capture/data/: webcam_config.py
fast_camera_capture/detection/: detect_cameras.py
fast_camera_capture/diagnostics/: create_diagnostic_plots.py  plot_framerate_diagnostics.py
fast_camera_capture/examples/: example1_single_camera_connection.py  framerate_diagnostics.py  record_synchronized_videos.py  record_videos.py  show_all_cameras_in_cv2_windows.py
fast_camera_capture/experiments/: cam_show.py  imshow_tester.py
fast_camera_capture/multi_camera_recorder/: synchronized_video_recorder.py
fast_camera_capture/multiproc/: queue.py
fast_camera_capture/opencv/: simplest_opencv_webcam_display.py
fast_camera_capture/qt_gui/: qt_gui_main.py  qt_gui_main_window.py
fast_camera_capture/qt_multi_camera_viewer/: qt_camera_viewer.py  qt_multi_camera_viewer.py
fast_camera_capture/synchronized_video_recorder/: synchronized_video_recorder.py
fast_camera_capture/utils/: default_paths.py
fast_camera_capture/viewer/: cv_cam_viewer.py
installers/: install-windows-pyapp.ps1  run_nuitka_installer_command  run_nuitka_installer_command.md  run_pyinstaller.py  skellycam-nuitka.config.yml
installers/nuitka_scripts/: Info.plist  nuitka_installer_linux.sh  nuitka_installer_mac.sh  nuitka_installer_notes.md  nuitka_installer_windows.bat  skellycam-nuitka.config.yml
installers/old/: run_pyinstaller_command.sh
layouts/: default.vue
notes/: SkellyCamDiagram.drawio.html
pages/: index.vue
scripts/: build_windows.bat
skellycam/: __init__.py  __main__.py  _main_loop.py  cli.py  run_qt_gui.py  run_skellycam_server.py  skellycam_server.py
skellycam-ui/: .gitignore  README.md  app.vue  electron-builder.json  electron-builder.json5  entitlements.mac.plist  forge.config.ts  index.html  main.js  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts  webpack.rules.ts
skellycam-ui/components/: ApiButtons.vue  CameraGridView.vue  CameraStatus.vue  NavLink.vue  SideBar.vue  Viewport3d.vue
skellycam-ui/composables/: server-client-methods.ts  useWebSocket.ts
skellycam-ui/electron/: electron-env.d.ts
skellycam-ui/layouts/: default.vue
skellycam-ui/pages/: api_buttons.vue  camera_status.vue  index.vue
skellycam-ui/public/: index.html
skellycam-ui/src/: App.test.tsx  App.tsx  index.html  index.ts
skellycam-ui/stores/: cameras.ts
skellycam-ui/types/: frontend-frame-payload.ts
skellycam/_main/: helpers.py  main.py  main_loop.py
skellycam/api/: app_factory.py  backend_websocket.py  create_app.py  fastapi_app.py  lifespan.py  log_api_routes.py  router.py  routers.py  run_backend.py  run_backend_server.py  run_server.py  run_skellycam_server.py  run_uvicorn_server.py  server_manager.py  standalone_routers.py  websocket_api.py
skellycam/app/: app_state.py
skellycam/backend/: backend.py  backend_loop.py  backend_main.py  backend_process_controller.py  controller.py  run_backend.py  run_server.py
skellycam/core/: __init__.py  backend_state.py  camera_group_manager.py  controller.py  types.py
skellycam/data_models/: camera_config.py  charuco_definition.py  frame_payload.py  message_from_backend.py  request_response.py  request_response_update.py
skellycam/detection/: detect_cameras.py
skellycam/diagnostics/: create_diagnostic_plots.py  framerate_diagnostics.py  plot_first_and_last_frames.py  plot_first_middle_and_last_frames.py  plot_framerate_diagnostics.py
skellycam/examples/: example1_single_camera_connection.py  record_synchronized_videos.py  show_all_cameras_in_cv2_windows.py  synchronize_frame_payloads.py
skellycam/experiments/: __init__.py  blosc2_compression.py  cam_show.py  fast_api.py  frontend_backend_test.py  image_compression_benchmarking.py  imshow_tester.py  multiprocessing_shared_memory_example.py  parameter_tree_view.py  simple_shared_memory_camera.py  simple_websocket.py  slider_widget.py
skellycam/frontend/: __init__.py  frontend.py  frontend_main.py  run_frontend.py
skellycam/gui/: __init__.py  fastapi_client.py  gui_main.py  gui_state.py
skellycam/main/: helpers.py  main.py  main_loop.py
skellycam/models/: doc_printing_base_model.py  fancy_base_model.py  (+2 more)
src-nuxt/: nuxt.config.ts  package-lock.json  package.json
src-nuxt-ui/: CONTRIBUTING.md  nuxt.config.ts  package.json
src-tauri/: tauri.conf.json
src-ui/: nuxt.config.ts  package-lock.json  package.json
tauri-nuxt-app/: install-python.js  package-lock.json  package.json  rename-binary.js
tests/: __init__.py  test_test.py
ui/: index.html  main.js
vue-skellycam-ui/: package-lock.json
(+1386 files in other folders)
