# pyproject.toml
# originally based on - https://realpython.com/pypi-publish-python-package/

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skellycam"
readme = "README.md"
authors = [
    {name = "Skelly FreeMoCap", email = "info@freemocap.org"},
    {name = "Endurance Idehen"},
    {name = "Jonathan Samir Matthis"},
    ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Video (UVC)",
    ]
keywords = [
    "camera",
    "stream",
    "video",
    "image",
    "opencv",
    "skelly",
    "freemocap",
    "motion capture",
    "synchronization",
    "computer vision"
]

#dynamic = ["dependencies"]
dependencies = [
"numpy==1.26.2",
"opencv-contrib-python==4.8.*",
"pydantic==1.*",
"Pillow==10.0.1",
"psutil==5.9.6",
"setproctitle==1.3.3",
"pyside6==6.6.*",
"matplotlib==3.8.2",
"scipy==1.11.4",
"rich==13.7.0",
"pandas==2.1.4",
"pyqtgraph==0.13.3",
"qtpy==2.4.1",
"toml==0.10.2",
"tqdm==4.66.1",
]
requires-python = ">=3.9,<3.12"

dynamic = ["version", "description"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/freemocap/skellycam"

[tool.bumpver]
current_version = "v2024.06.1091"

version_pattern = "vYYYY.0M.BUILD[-TAG]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
#"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"skellycam/__init__.py" = ["{version}"]

#[tool.setuptools.dynamic]
#dependencies = {file = "requirements.txt"}

[project.scripts]
skellycam = "skellycam.__main__:main"

[tool.setuptools]
py-modules = ["skellycam"]