[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skellycam"
readme = "README.md"
authors = [
    { name = "Skelly FreeMoCap", email = "info@freemocap.org" },
    { name = "Endurance Idehen" },
    { name = "Jonathan Samir Matthis" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Video (UVC)",
]
keywords = [
    "camera",
    "stream",
    "video",
    "image",
    "opencv",
    "skelly",
    "freemocap",
    "motion capture",
    "synchronization",
    "computer vision"
]

dependencies = [
    "numpy==1.26.2",
    "opencv-contrib-python==4.10.*",
    "pydantic==2.*",
    "Pillow==10.0.1",
    "psutil==5.9.6",
    "setproctitle==1.3.3",
    "scipy==1.11.4",
    "pandas==2.1.4",
    "uvicorn>=0.30.6",
    "fastapi>=0.115.0",
    "tzlocal>=5.2",
    "httpx>=0.27.2",
    "websockets>=13.1",
    "pip>=24.2",
    "pyaudio>=0.2.14",
    "tabulate>=0.9.0",
    "nuitka>=2.6.5",
    "numpydantic>=1.6.9",
    "cv2-enumerate-cameras>=1.2.2",
]
requires-python = ">=3.10,<3.13"

dynamic = ["version", "description"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/freemocap/skellycam"

[tool.bumpver]
current_version = "v2024.09.1094"

version_pattern = "vYYYY.0M.BUILD[-TAG]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"skellycam/__init__.py" = ["{version}"]


[project.scripts]
skellycam = "skellycam.__main__:main"
#skellycam-build-pyinstaller = "skellycam.system.build_installer.run_pyinstaller:run_pyinstaller"
#skellycam-build-nuitka = "nuitka --onefile --user-package-configuration-file=installers/skellycam-nuitka.config.yml skellycam/run_skellycam_server.py"

[tool.setuptools]
py-modules = ["skellycam"]

[tool.uv]
dev-dependencies = [
#    "nuitka>=2.4.9",
#    "pyinstaller>=6.11.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
